--- a/css/media.css
+++ b/css/media.css
@@ -4,6 +4,9 @@
 @media (max-width: 575.98px) { 
 
 /*header start*/
+.logo {
+	width: 60%;
+}
 .top_ul{
 	padding: 18px 0;
 }
@@ -20,17 +23,24 @@
 	margin-left: 0;
 	display: inline-block;
 }
-
 /*header end*/
-
-/*hero start*/
+/* hero start */
+.hero {
+	padding: 30px 0px 40px;
+}
 .hero_text h1{
+
 	font-size: 28px;
-	line-height: 38px;
+	text-align: center;
+	line-height: 35px;
+
 }
-.hero_text p{
-	font-size: 18px;
+.hero_text p {
+	margin-top: 5px;
+	text-align: center;
+	font-size: 20px;
 }
+/* hero end */
 
 /*ftr start*/
 .f_content ul li p{
@@ -163,10 +173,13 @@
 /* cta end */
 
 /*ftr start*/
+.f_content ul li h2{
+	font-size: 26px;
+}
 .f_content ul li p{
 	padding-right: 0px;
 }
-
+/*ftr end*/
 /*tpbrand*/
 .tpb_img_cntnt{
 	display: none;
